# advent-of-code

./: .flake8  README.md  pyproject.toml  setup.sh
2023/1/: 1.py
2023/day_1/part_1/: .main.py.swp  main.py
adventofcode/2023/day_1/: 2.py
adventofcode/2023/day_1/part_1/: main.py
adventofcode/_2023/_1/: 2.py
adventofcode/helpers/: executor.py  file.py  parsers.py  paths.py  resources.py  strings.py
adventofcode/y2023/d1/p1/: __init__.py
adventofcode/y2023/d1/p2/: __init__.py
adventofcode/y2023/d10/p1/: __init__.py
adventofcode/y2023/d10/p2/: __init__.py
adventofcode/y2023/d11/p1/: __init__.py
adventofcode/y2023/d11/p2/: __init__.py
adventofcode/y2023/d12/p1/: __init__.py
adventofcode/y2023/d12/p2/: __init__.py
adventofcode/y2023/d13/p1/: __init__.py
adventofcode/y2023/d13/p2/: __init__.py
adventofcode/y2023/d14/p1/: __init__.py
adventofcode/y2023/d14/p2/: __init__.py
adventofcode/y2023/d15/p1/: __init__.py
adventofcode/y2023/d15/p2/: __init__.py
adventofcode/y2023/d16/p1/: __init__.py
adventofcode/y2023/d16/p2/: __init__.py
adventofcode/y2023/d17/p1/: __init__.py
adventofcode/y2023/d2/: __init__.py
adventofcode/y2023/d2/p1/: __init__.py
adventofcode/y2023/d2/p2/: __init__.py
adventofcode/y2023/d3/p1/: __init__.py
adventofcode/y2023/d3/p2/: __init__.py
adventofcode/y2023/d4/p1/: __init__.py
adventofcode/y2023/d4/p2/: __init__.py
adventofcode/y2023/d5/p1/: __init__.py
adventofcode/y2023/d5/p2/: __init__.py
adventofcode/y2023/d6/p1/: __init__.py
adventofcode/y2023/d6/p2/: __init__.py
adventofcode/y2023/d7/p1/: __init__.py
adventofcode/y2023/d7/p2/: __init__.py
adventofcode/y2023/d8/p1/: __init__.py
adventofcode/y2023/d8/p2/: __init__.py
adventofcode/y2023/d9/p1/: __init__.py
adventofcode/y2023/d9/p2/: __init__.py
src/2023/day_1/part_1/: main.py
