[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
2023_1_1 = "adventofcode.y2023.d1.p1:main"
2023_1_2 = "adventofcode.y2023.d1.p2:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
