[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
parsy = "2.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
mypy = "1.7.1"

[tool.poetry.scripts]
2023_1_1 = "adventofcode.y2023.d1.p1:main"
2023_1_2 = "adventofcode.y2023.d1.p2:main"
2023_2_1 = "adventofcode.y2023.d2.p1:main"
2023_2_2 = "adventofcode.y2023.d2.p2:main"
2023_3_1 = "adventofcode.y2023.d3.p1:main"
2023_3_2 = "adventofcode.y2023.d3.p2:main"
2023_4_1 = "adventofcode.y2023.d4.p1:main"
2023_4_2 = "adventofcode.y2023.d4.p2:main"
2023_5_1 = "adventofcode.y2023.d5.p1:main"
2023_5_2 = "adventofcode.y2023.d5.p2:main"

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
