[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
parsy = "2.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
mypy = "1.7.1"

[tool.poetry.scripts]
2023_1_1 = "adventofcode.y2023.d1.p1:main"
2023_1_2 = "adventofcode.y2023.d1.p2:main"
2023_2_1 = "adventofcode.y2023.d2.p1:main"
2023_2_2 = "adventofcode.y2023.d2.p2:main"
2023_3_1 = "adventofcode.y2023.d3.p1:main"
2023_3_2 = "adventofcode.y2023.d3.p2:main"
2023_4_1 = "adventofcode.y2023.d4.p1:main"
2023_4_2 = "adventofcode.y2023.d4.p2:main"
2023_5_1 = "adventofcode.y2023.d5.p1:main"
2023_5_2 = "adventofcode.y2023.d5.p2:main"
2023_6_1 = "adventofcode.y2023.d6.p1:main"
2023_6_2 = "adventofcode.y2023.d6.p2:main"
2023_7_1 = "adventofcode.y2023.d7.p1:main"
2023_7_2 = "adventofcode.y2023.d7.p2:main"
2023_8_1 = "adventofcode.y2023.d8.p1:main"
2023_8_2 = "adventofcode.y2023.d8.p2:main"
2023_9_1 = "adventofcode.y2023.d9.p1:main"
2023_9_2 = "adventofcode.y2023.d9.p2:main"
2023_10_1 = "adventofcode.y2023.d10.p1:main"
2023_10_2 = "adventofcode.y2023.d10.p2:main"
2023_11_1 = "adventofcode.y2023.d11.p1:main"
2023_11_2 = "adventofcode.y2023.d11.p2:main"
2023_12_1 = "adventofcode.y2023.d12.p1:main"
2023_12_2 = "adventofcode.y2023.d12.p2:main"
2023_13_1 = "adventofcode.y2023.d13.p1:main"
2023_13_2 = "adventofcode.y2023.d13.p2:main"
2023_14_1 = "adventofcode.y2023.d14.p1:main"
2023_14_2 = "adventofcode.y2023.d14.p2:main"

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
